--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body id="body">
     <header class="main-header">
-      <div class="container">
+      <div id="main-nav" class="container">
         <a href="index.html" class="main-header__logo">MovieApp</a>
         <nav class="main-nav">
           <ul class="main-nav__items">
@@ -21,6 +21,12 @@
             </li>
             <li class="main-nav__item main-nav__item--login">
               <a class="btn btn-secondary" href="register.html">SignUp</a>
+            </li>
+        
+            <li class="main-nav__item">
+              <a href="#" onclick="displaymenu()">
+                <i style="font-size: 20px;"class="fa fa-bars"></i>
+              </a>
             </li>
           </ul>
         </nav>
@@ -236,7 +242,12 @@
 
     <a href="#body" id="backtotop">
       <i class="fas fa-chevron-circle-up"></i>
-      
     </a>
+    <script>
+      function displaymenu() {
+        var link = document.getElementById("main-nav");
+        link.classList.toggle("responsive");
+      }
+    </script>
   </body>
 </html>
